<resources>
    <string name="app_name">Tally Book Keeping</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_registered">Already Registered? Sign in</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_create_account">Create Account</string>
    <string name="not_registered">Not Registered? Sign Up</string>
    <string name="title_create_account">Create Account</string>
    <string name="title_sign_in">Sign In</string>
    <string name="terms_and_conditions">By registering on this app, you accept the terms of service and acknowledge the privacy policy of this site</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="firstNameLastName">%1$s %2$s</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_reset_text">Enter your email address below to reset your password</string>
    <string name="bookkeeping">Book Keeping</string>
    <string name="inventory">Inventory</string>
    <string name="debt">Debt</string>
    <string name="account">Account</string>
    <string name="login"><u>Go to Login</u></string>
    <string name="create_new_account"><u>Create Account</u></string>
    <string name="account_created_status">Account created. Sign in to continue</string>
    <string name="account_status">Error</string>
    <string name="registration_failed">REGISTRATION FAILED. TRY AGAIN.</string>
    <string name="sign_in_to_continue">Account created. Sign in below to continue</string>
    <string name="show_success">This is so fucking cool!</string>
    <string name="show_failure">Google Sign in failed</string>
    <string name="sign_in">Sign In</string>
    <string name="next_button">NEXT</string>
    <string name="finish_button">FINISH</string>
    <string name="open_bracket">(</string>
    <string name="percentsign">%)</string>
    <string name="required">(required)</string>
    <string name="optional"> (optional)</string>
    <string name="amount_received_error">Amount received cannot be greater than total or sub-total amount</string>
    <string name="discount_error">Discount amount cannot be greater than total amount.</string>
    <string name="total_amount_error">Total amount must be greater than 0.</string>
    <string name="items_total_error1">Items total cost should be equal to: Total Amount</string>
    <string name="items_total_error2">Items total cost should be equal to: Subtotal Amount</string>
    <string name="customer_error">Customer details required for this entry</string>
    <string name="desc_text">2 boxes</string>
    <string name="supplier_error">Supplier details required for this entry</string>
    <string name="select_category">Select Category</string>
    <string name="percentage">Percentage(%)</string>
    <string name="discount_amount">Amount</string>
    <string name="main_activity">Main Activity</string>
    <string name="add_customer">Add Customer</string>
    <string name="customer_name">Customer Name</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_hint">07689775742</string>
    <string name="done">Done</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="save">Save</string>
    <string name="add_item">Add Item</string>
    <string name="product_service_name">Product/Service name</string>
    <string name="price">Price</string>
    <string name="_0_00">0.00</string>
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>
    <string name="add_stock">Add Stock</string>
    <string name="left">Left:</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="_07689775742">07689775742</string>
    <string name="out">OUT</string>
    <string name="in">IN</string>
    <string name="are_you_sure_you_want_to_delete_this_transaction">Are you sure you want to delete this transaction?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
    <string name="select_date">Select Date</string>
    <string name="change_password">Change Password</string>
    <string name="discount">Discount</string>
    <string name="enter_discount">Enter Discount</string>
    <string name="remove">Remove</string>
    <string name="discount_type">Discount Type</string>
    <string name="amount">Amount</string>
    <string name="transport">Transport</string>
    <string name="account_details">Account Details</string>
    <string name="account_name">Account Name</string>
    <string name="account_email">Account Email</string>
    <string name="business_details">Business details</string>
    <string name="business_name">Business Name</string>
    <string name="business_address">Business Address</string>
    <string name="business_phone">Business Phone</string>
    <string name="get_support">Get Support</string>
    <string name="_077_734_8734">077 734 8734</string>
    <string name="support_tallyapp_co_uk">support@tallyapp.co.uk</string>
    <string name="sign_out">Sign Out</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="add_product">Add Product</string>
    <string name="cost_price">Cost Price</string>
    <string name="selling_price">Selling Price</string>
    <string name="add_item_image">Add Item Image</string>
    <string name="pos">POS</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="cash">Cash</string>
    <string name="payment_details">PAYMENT DETAILS:</string>
    <string name="add_supplier">+ Add Supplier</string>
    <string name="supplier">SUPPLIER</string>
    <string name="category">CATEGORY</string>
    <string name="supplies">supplies</string>
    <string name="description_required">DESCRIPTION (required)</string>
    <string name="add_items_optional">Add Items (optional)</string>
    <string name="add_more_items">+ Add more items</string>
    <string name="total">Total</string>
    <string name="items">ITEMS</string>
    <string name="balance_due">Balance Due</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="total_amount">Total Amount</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="amount_received">Amount Received</string>
    <string name="add">Add +</string>
    <string name="add_customer2">+ Add Customer</string>
    <string name="customer">CUSTOMER</string>
    <string name="sub_total">Sub Total</string>
    <string name="reset_password">Reset Password</string>
    <string name="accounts_receivable">Accounts Receivable:</string>
    <string name="accounts_payable">Accounts Payable:</string>
    <string name="receivables">Receivables</string>
    <string name="no_receivables_to_display">No Receivables to display</string>
    <string name="no_payables_to_display">No Payables to display</string>
    <string name="payables">Payables</string>
    <string name="all_records">All Records</string>
    <string name="filter">Filter</string>
    <string name="introducing_tally">Introducing tally…</string>
    <string name="best_in_book_keeping">…best in book keeping</string>
    <string name="track_all_receivables_and_payables">track all receivables and payables</string>
    <string name="update_inventory_with_ease">…update inventory with ease</string>
    <string name="receipt">RECEIPT</string>
    <string name="invoice_number">Invoice number:</string>
    <string name="receipt_no">Receipt No:</string>
    <string name="items_small_letter">Items</string>
    <string name="item">Item</string>
    <string name="unit_price">Unit Price</string>
    <string name="qty">Qty</string>
    <string name="amount_received_colon">Amount Received:</string>
    <string name="balance_due_colon">Balance due:</string>
    <string name="payment_method">Payment method:</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="not_registered_sign_up">Not registered? Sign up</string>
    <string name="logo">logo</string>
    <string name="inventory_item">Inventory Item</string>
    <string name="stock_name">Stock name:</string>
    <string name="stock_left">Stock left:</string>
    <string name="receipt_small_letter">Receipt</string>
    <string name="update_payment">Update Payment</string>
    <string name="paying_fully">Paying Fully</string>
    <string name="paying_partly">Paying Partly</string>
    <string name="update_email">Update Email</string>
    <string name="update_business_phone">Update Business Phone</string>
    <string name="new_business_phone">New Business Phone</string>
    <string name="update_business_name">Update Business Name</string>
    <string name="new_business_name">New Business Name</string>
    <string name="update_business_address">Update Business Address</string>
    <string name="new_business_address">New Business Address</string>
    <string name="update_name">Update Name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="discount_amount2">Discount Amount:</string>
    <string name="fully_paid">Fully Paid</string>
    <string name="payment_history">Payment History</string>
    <string name="date">Date</string>
    <string name="see_all_records">See All Records</string>
    <string name="records">Records</string>
    <string name="all_time_balance">All-time Balance</string>
    <string name="all_time_expense">All-time Expense</string>
    <string name="all_time_income">All-time Income</string>
    <string name="balance_today">Balance Today</string>
    <string name="expense_today">Expense Today</string>
    <string name="income_today">Income Today</string>
    <string name="no_records_to_display">No Records to display</string>
    <string name="expense_capital_letter">EXPENSE</string>
    <string name="income_capital_letter">INCOME</string>
    <string name="terms_and_conditions2">Terms and conditions</string>
</resources>