<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/are_you_sure_you_want_to_sign_out"
        android:layout_gravity="center"
        android:layout_marginVertical="16dp"
        android:textAlignment="center"
        android:textColor="@color/text_color2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sign_out_yes_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/yes"
        android:textAlignment="center"
        android:paddingVertical="12dp"
        android:textColor="@color/reverse_text_color"
        android:background="@drawable/yes_button_background"/>

    <TextView
        android:id="@+id/sign_out_no_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/no"
        android:textAlignment="center"
        android:paddingVertical="12dp"
        android:textColor="@color/text_color1"
        android:background="@drawable/no_button_background"/>

</LinearLayout>
