<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="24dp"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/add_item"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/text_color1"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/item_close_icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_close_24" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/product_service_name"
            android:textColorHint="@color/text_color1"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxCornerRadiusTopStart="8dp"
            app:expandedHintEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/text_color2">

            <EditText
                android:id="@+id/edit_text_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_style2"
                android:inputType="text"
                android:maxLength="30"
                android:textSize="16sp"
                android:textCursorDrawable="@drawable/edit_text_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/price"
            android:textColorHint="@color/black"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxStrokeWidth="0dp"
            app:expandedHintEnabled="false"
            app:hintEnabled="true"
            app:hintTextColor="@color/black">

            <EditText
                android:id="@+id/edit_text_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="12"
                android:background="@drawable/edit_text_style2"
                android:hint="@string/_0_00"
                android:inputType="numberDecimal"
                android:textCursorDrawable="@drawable/edit_text_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:paddingStart="12dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/quantity"
            android:textColor="@color/text_color1"
            android:textSize="16sp" />
        <ImageView
            android:id="@+id/plus"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_add_svgrepo_com" />

        <ImageView
            android:id="@+id/minus"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_toStartOf="@id/edit_text_quantity"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_remove_svgrepo_com" />

        <EditText
            android:id="@+id/edit_text_quantity"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_toStartOf="@+id/plus"
            android:inputType="number"
            android:gravity="center"
            android:maxLength="9"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:text="@string/_1" />



    </RelativeLayout>

    <Button
        android:id="@+id/button_save_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:textAllCaps="false"
        android:text="@string/save"
        android:textColor="@color/reverse_text_color" />
</LinearLayout>