<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.chrisojukwu.tallybookkeeping.ui.account.SignInViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.account.EmailSignInPageFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/back_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_baseline_arrow_back_24"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="36dp"
            android:paddingEnd="36dp">
        <TextView
            android:id="@+id/text_view_page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/forgot_password"
            android:textColor="@color/text_color2"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/text_view_page_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/password_reset_text"
            android:textColor="@color/text_color3"
            android:textSize="16sp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:textColorHint="@color/grey"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="60"/>


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="false"
            android:text="@string/reset_password"
            android:textColor="@color/text_on_primary_color"
            android:textSize="16sp"
            android:paddingVertical="8dp"
            app:buttonLoadingStatus="@{viewModel.isLoading()}"/>

        </LinearLayout>


    </LinearLayout>

</layout>