<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/background_color1"
    tools:context=".ui.account.SignInFragment">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/image_view_tally_logo"
            android:layout_width="124dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/tally25asset_23"
            android:contentDescription="@string/logo" />


        <TextView
            android:id="@+id/text_view_app_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_view_tally_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif"
            android:text="@string/best_in_book_keeping"
            android:textColor="@color/text_color2"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="80dp"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#C7CD6D"
                android:padding="4dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/email_svgrepo_com" />

                <TextView
                    android:id="@+id/text_view_email_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="6dp"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif"
                    android:text="@string/sign_in_with_email"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="46dp"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#2C3ABA"
                android:padding="4dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/google_svgrepo_com" />

                <TextView
                    android:id="@+id/text_view_google_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif"
                    android:paddingVertical="6dp"
                    android:text="@string/sign_in_with_google"
                    android:textColor="@color/text_on_primary_color"
                    android:textSize="18sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_view_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/not_registered_sign_up"
            android:textColor="@color/primary_color_light_variant"
            android:textSize="18sp"/>

    </LinearLayout>


</LinearLayout>

</layout>